--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,8 @@
     "@mantine/hooks": "^8.3.12",
     "katex": "^0.16.27",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-remove-scroll": "^2.7.2"
+    "react-dom": "^18.3.1"
+    
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
