--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
-    "@tailwindcss/postcss": "^4.1.18",
     "@types/react": "^19.2.5",
     "@types/react-dom": "^19.2.3",
     "@vitejs/plugin-react": "^5.1.1",
@@ -35,7 +34,7 @@
     "globals": "^16.5.0",
     "patch-package": "^8.0.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.19",
+    "tailwindcss": "3.4.19",
     "vite": "^7.2.4"
   },
   "overrides": {
