--- a/frontend/package.json
+++ b/frontend/package.json
@@ -34,7 +34,7 @@
     "globals": "^16.5.0",
     "patch-package": "^8.0.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "3.4.19",
+    "tailwindcss": "^3.4.1",
     "vite": "^7.2.4"
   },
   "overrides": {
